--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Docker Nginx Static HTML</title>
+        <title>Docker Nginx Static HTML demo</title>
     </head>
     <body>
         <h1>Docker Nginx Static HTML demo</h1>
